<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginLeft="@dimen/std_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:layout_marginRight="@dimen/std_margin"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/massTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:fontFamily="@font/lato"
            android:text="@string/mass"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/massInput"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/massTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imperialMassContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/massInput">

            <TextView
                android:id="@+id/stoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:fontFamily="@font/lato"
                android:text="@string/stone"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/poundInput"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stoneLabel" />

            <TextView
                android:id="@+id/leighLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:fontFamily="@font/lato"
                android:text="@string/pound"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poundInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginLeft="@dimen/std_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:layout_marginRight="@dimen/std_margin"
        android:layout_marginBottom="@dimen/form_btn_margin"
        app:layout_constraintBottom_toTopOf="@+id/bmiBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:fontFamily="@font/lato"
            android:text="@string/height"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imperialHeightContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heightInput">

            <TextView
                android:id="@+id/feetLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:fontFamily="@font/lato"
                android:text="@string/feet"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/inchInput"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/feetLabel" />

            <TextView
                android:id="@+id/inchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:fontFamily="@font/lato"
                android:text="@string/inch"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inchInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bmiBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginLeft="@dimen/std_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:layout_marginRight="@dimen/std_margin"
        android:layout_marginBottom="@dimen/two_std_margin"
        android:fontFamily="@font/lato_bold"
        android:onClick="countBmi"
        android:text="@string/count_bmi"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/massError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/error_margin"
        android:layout_marginLeft="@dimen/error_margin"
        android:fontFamily="@font/lato"
        android:textColor="@color/error"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/heightError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/error_margin"
        android:layout_marginLeft="@dimen/error_margin"
        android:fontFamily="@font/lato"
        android:textColor="@color/error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_marginBottom="@dimen/std_margin"
        android:onClick="showBmiDescriptionActivity"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/bmi_value"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bmiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>