<resources>
    <string name="app_name">BMI</string>
    <string name="mass">Mass</string>
    <string name="mass_input">Input your mass</string>
    <string name="height">Height</string>
    <string name="height_input">Input your height</string>
    <string name="count_bmi">Count BMI</string>
    <string name="bmi_value">BMI value</string>
    <string name="error_mass_empty">Pleas fill the mass input</string>
    <string name="error_height_empty">Pleas fill the height input</string>
    <string name="error_mass_zero">Mass cannot be a zero</string>
    <string name="error_height_zero">Height cannot be a zero</string>
    <string name="empty" />
    <string name="settings">Settings</string>
    <string name="data_type">Data type</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="metric_mass">&#160;[kg]</string>
    <string name="metric_height">&#160;[m]</string>
    <string name="imperial_mass">&#160;[st&amp;lb]</string>
    <string name="imperial_height">&#160;[ft&amp;in]</string>
    <string name="feet">ft</string>
    <string name="inch">in</string>
    <string name="stone">st</string>
    <string name="pound">lb</string>
    <string name="about_author">About author</string>
    <string name="author_name">Author name</string>
    <string name="author_name_value">Piotr Kędra</string>
    <string name="author_index">Author index</string>
    <string name="author_index_value">258287</string>
    <string name="bmi_status">BMI status:</string>
    <string name="underweight">&#160;underweight</string>
    <string name="normal">&#160;normal</string>
    <string name="overweight">&#160;overweight</string>
    <string name="obesity">&#160;obesity</string>
    <string name="underweight_des">BMI less than 18.5: underweight</string>
    <string name="normal_des">BMI 18.5 to 25: normal</string>
    <string name="overweight_des">BMI 25 to 30: overweight</string>
    <string name="obesity_des">BMI above 30: obesity</string>
</resources>